spacing issues fixed

--- a/src/App.css
+++ b/src/App.css
@@ -73,7 +73,7 @@ section, figure {
   color: forest-green;
   text-align: center;
   font-size: 1.5rem;
-  margin-bottom: var(--med-spacing);
+  margin-bottom: var(--small-spacing);
 }
 
 ul {
